--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,3 @@
-
 name: Deploy Docs
 
 on:
@@ -18,8 +17,6 @@ jobs:
           # if your docs needs submodules, uncomment the following line
           # submodules: true
 
-
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -35,9 +32,8 @@ jobs:
         run: yarn run docs:build
 
       - name: Deploy Docs
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: hyunmui/hyunmui.github.io
         with:
           # This is the branch where the docs are deployed to
-          branch: gh-pages
+          branch: main
           folder: blog-flexibledev/.vuepress/dist
-
